feat: added dropdown component with logic

--- a/src/components/reusable/DropDown/dropdown.scss
+++ b/src/components/reusable/DropDown/dropdown.scss
@@ -46,7 +46,7 @@
   border: 1px solid transparent;
 }
 
-.select.open .options {
+.open-options {
   opacity: 1;
   visibility: visible;
   pointer-events: all;
