--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -42,6 +42,10 @@
 .scroll-container {
   height: 30px;
 }
+.map-container {
+  height: 580px;
+}
+
 
 .bookmarks-county-list li,
 .legend-list li {
