feat: update gh-links in footer

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -106,4 +106,9 @@ footer ul li {
   .year {
     margin: 40px auto 5px;
   }
+  footer ul li a {
+    width: 70px;
+    justify-content: flex-start;
+    margin: 0 auto;
+  }
 }
