--- a/src/components/reusable/DropDown/dropdown.scss
+++ b/src/components/reusable/DropDown/dropdown.scss
@@ -3,12 +3,14 @@
   user-select: none;
   min-width: 200px;
   max-width: 200px;
+  outline: none;
 }
 
 .select {
   position: relative;
   display: flex;
   flex-direction: column;
+  outline: none;
 }
 
 .select__trigger {
@@ -61,6 +63,7 @@
   color: var(--text);
   cursor: pointer;
   transition: all 0.5s;
+  outline: none;
 }
 
 .option:hover {
