--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -91,12 +91,13 @@ footer ul li {
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 740px) {
   footer ul li:first-child {
     margin-left: 0;
   }
   footer ul,
   .github-links {
+    grid-gap: 2px;
     flex-wrap: wrap !important;
   }
   .github-links ul,
@@ -105,5 +106,11 @@ footer ul li {
   }
   .year {
     margin: 40px auto 5px;
+  }
+  .github-links a {
+    width: 80px;
+    margin: 5px auto;
+    display: flex;
+    justify-content: flex-start;
   }
 }
