--- a/src/components/Tables/DeathTable/index.scss
+++ b/src/components/Tables/DeathTable/index.scss
@@ -4,14 +4,14 @@
 }
 
 .counter-value {
-  font-size: 8px;
-  line-height: 8px;
+  font-size: 10px;
+  line-height: 10px;
   color: rgba(243, 243, 243, 0.5);
 }
 
 .country {
   margin-left: 10px;
-  font-size: 8px;
+  font-size: 10px;
   line-height: 8px;
   color: rgba(243, 243, 243, 0.9);
 }
@@ -26,49 +26,50 @@
   color: #fffd;
 }
 
+.global-counter_deaths li {
+  width: 100%;
+}
+
+.table-item {
+  width: 97% !important;
+}
+
 .recovery-cases-list {
   li {
-    span {
-      margin: 0 !important;
-    }
+    white-space: pre-wrap;
     padding-left: 2px !important;
   }
   .counter-value {
     font-size: 10px;
     line-height: 10px;
     color: var(--blue);
-    margin-left: 2px;
+    margin-left: 5px;
   }
   .counter {
-    font-size: 10px;
+    font-size: 12px;
     line-height: 10px;
     color: var(--blue);
-    margin-left: 2px;
+    margin-left: 5px;
   }
   .counter-recovered {
-    font-size: 10px;
+    font-size: 12px;
     line-height: 10px;
     color: var(--text);
-    margin-left: 2px;
+    margin-left: 10px;
   }
   .counter-recovered-value {
     font-size: 10px;
     line-height: 10px;
     color: var(--text);
-    margin-left: 2px;
+    margin-left: 5px;
   }
-  .city {
-    font-size: 10px;
-    line-height: 10px;
-    color: var(--text);
-    margin-left: 2px;
-  }
+
   .country {
-    font-size: 10px;
+    font-size: 10px !important;
     line-height: 10px;
     color: var(--text);
-    margin-left: 2px;
-    font-size: 8px;
+    margin-left: 10px;
+    font-size: 10px;
     line-height: 8px;
     color: rgba(243, 243, 243, 0.9);
   }
