feat: update table style

--- a/src/components/Tables/DeathTable/index.scss
+++ b/src/components/Tables/DeathTable/index.scss
@@ -1,6 +1,6 @@
 .scroll-container {
   width: 250px;
-  max-height: 104px;
+  max-height: 130px;
 }
 
 .counter-value {
@@ -17,7 +17,7 @@
 }
 
 .global-counter_deaths {
-  font-size: 26px;
+  font-size: 1.4rem;
   color: #fffd;
 }
 
