--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -42,7 +42,6 @@ body {
 
 main {
   position: relative;
-  width: 1024px;
   min-width: 320px;
   height: 768px;
   margin: 0 auto;
@@ -194,6 +193,16 @@ main {
   padding: 6px;
 }
 
+[full] .input input {
+  width: 100%;
+  min-height: 24px;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: var(--text);
+  padding: 6px;
+}
+
 .input input::placeholder {
   color: var(--white);
 }
@@ -252,8 +261,16 @@ input:focus::placeholder {
   transition: 0.1s all;
 }
 
+[full] .full-screen-btn svg {
+  width: 16px;
+}
+
 .full-screen-btn:hover {
   transform: scale(1.2);
+}
+
+[full] .full-screen-btn:hover {
+  transform: scale(1.1);
 }
 
 .dropdown {
@@ -270,6 +287,10 @@ input:focus::placeholder {
   width: 220px;
   height: 400px;
   overflow-y: scroll;
+}
+
+[full] .scroll-container {
+  height: 80vh;
 }
 
 .list ul {
@@ -289,6 +310,12 @@ input:focus::placeholder {
 
 .list li:hover {
   border: 1px solid var(--purple);
+}
+
+[full] li,
+[full] .scroll-container {
+  min-width: 320px;
+  width: 98%;
 }
 
 @media screen and (min-width: 1040px) {
@@ -339,7 +366,6 @@ input:focus::placeholder {
   }
 
   li,
-  li,
   .scroll-container {
     width: 98% !important;
   }
@@ -347,10 +373,6 @@ input:focus::placeholder {
   .container {
     width: 99.2%;
     padding-right: 2px;
-  }
-
-  .full-screen-btn {
-    left: 95.4%;
   }
 
   .map {
@@ -409,17 +431,22 @@ input:focus::placeholder {
 }
 
 // Modal Window FullScreen
-.full {
-  width: 100%;
-  height: 100%;
+[full] {
+  position: fixed;
+  z-index: 999;
+  width: 98%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   padding: 40px 57px 20px;
+  top: 10px;
+  bottom: 10px;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
-.full .wrapper {
+[full] .wrapper {
   width: 100%;
   display: flex;
   justify-content: flex-start;
@@ -427,30 +454,31 @@ input:focus::placeholder {
   align-items: flex-start;
 }
 
-.full .wrapper div {
+[full] .wrapper div {
   width: 100%;
 }
 
-.full .select__trigger span {
+[full] .select__trigger span {
   width: 242px;
 }
 
-.full .scroll-container {
+[full] .wrapper,
+[full] .scroll-container {
   width: 100%;
-  height: 560px;
+  max-height: 90vh;
 }
 
-.full .bookmarks .scroll-container,
-.full .basemaps .scroll-container {
+[full] .bookmarks .scroll-container,
+[full] .basemaps .scroll-container {
   height: 100px;
 }
 
-.full .legend .scroll-container {
+[full] .legend .scroll-container {
   height: 66px;
 }
 
-.full .legend .scroll-container li,
-.full .bookmarks .scroll-container li {
+[full] .legend .scroll-container li,
+[full] .bookmarks .scroll-container li {
   width: 96%;
 }
 
@@ -459,19 +487,24 @@ input:focus::placeholder {
   justify-content: flex-start;
 }
 
-.full .map-area {
+[full] .map-area {
   width: 100%;
 }
 
-.full .global-heading,
-.full .date-heading {
+[full] .global-heading,
+[full] .date-heading {
   font-size: 22px;
   margin-bottom: 10px;
 }
 
-.full .global-cases-counter,
-.full .update-time {
+[full].global-cases {
+  justify-content: center;
+}
+
+[full] .global-cases-counter,
+[full] .update-time {
   font-size: 68px;
+  
 }
 
 .map-nav {
