feat: date align center

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -503,8 +503,8 @@ input:focus::placeholder {
 
 [full] .global-cases-counter,
 [full] .update-time {
-  font-size: 68px;
-  
+  text-align: center;
+  font-size: 48px;
 }
 
 .map-nav {
